@@ -12,6 +12,19 @@ x documentation on http://hamsterdb.com/public/scripts/html_www/modules.html:
     hamsterdb Cursor Functions is a child of hamsterdb Database Functions - but
     it should be on the same level!
 
+x can we extend the statistic module to find out if a Database is sequential,
+    and then decide to have late page splits when inserting keys?
+    x make sure that ham_check_integrity does not find false positives
+    x try to find better pivot values
+        x also make sure that my_insert_split is only called if the merge
+            makes sense - it's ok
+        x also for optimized cursor-inserts with HAM_HINT_APPEND - no, it's ok
+        x unittest for default splitting
+        x what if HAM_DAM_SEQUENTIAL_INSERT is not specified? can we 
+            optimize the pivot value?
+            x unittest!
+        x unittest for SEQUENTIAL INSERT and late splitting
+
 o Windows: are the file mapping routines really ok? does the file mapping
     handle have to be created over the whole file size? does it have to be
     created with every mmap call??
@@ -29,18 +42,6 @@ o Windows: are the file mapping routines really ok? does the file mapping
 
 o statistics.c: has big code about cach history which is only used in debug
     mode - check what this is - is it needed?
-
-o can we extend the statistic module to find out if a Database is sequential,
-    and then decide to have late page splits when inserting keys?
-    x make sure that ham_check_integrity does not find false positives
-    o try to find better pivot values
-        x also make sure that my_insert_split is only called if the merge
-            makes sense - it's ok
-        x also for optimized cursor-inserts with HAM_HINT_APPEND - no, it's ok
-        o what if HAM_DAM_SEQUENTIAL_INSERT is not specified? can we 
-            optimize the pivot value?
-            o unittest!
-        o unittest for SEQUENTIAL INSERT and late splitting
 
 o update the Java API 
 
