@@ -14,6 +14,7 @@ AM_CPPFLAGS     = -I$(top_builddir)/include
 test_SOURCES    = log.cpp \
                   api110.cpp \
                   btree_erase.cpp \
+                  btree_insert.cpp \
                   check.cpp \
                   error.cpp \
                   filter.cpp \
